작품등록, 자랑하기 등록, 전시후기/소개 등록, 노하우 등록

--- a/src/main/resources/templates/thymeleaf/fo/myPage/myWorkList.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myWorkList.html
@@ -1652,7 +1652,7 @@ $('.wdb-5').click(function(e){
 				        },
 				        success: function(data) {
 				        	if(data.result > 0){
-				        		modalAlertShow("선택한 작품 삭제가 완료되었습니다.", "reload");
+				        		modalAlertShow("선택한 작품 " + data.result + "개 삭제가 완료되었습니다.", "reload");
 				        	}else{
 				        		modalAlertSHow("작품 삭제에 실패했습니다.<br/>다시 시도해주세요.", "reload");
 				        	}
