--- a/src/main/resources/static/css/common_new.css
+++ b/src/main/resources/static/css/common_new.css
@@ -15,11 +15,11 @@ input, select {-webkit-appearance:none; -moz-appearance:none; appearance: none; 
 input:focus,select:focus,textarea:focus,a:focus,button:focus{outline:none}
 textarea{resize: none;}
 button{cursor:pointer; background:none;}
-label{display: none;}
+/* label{display: none;} */ /* 수정 2023-07-21 */
 strong{font-weight: bold;}
 input[type="text"],
 input[type="password"] {
-  height: auto;
+  /* height: auto; */ /* 정영우 수정 2023-07-20 */
   line-height: normal;
   letter-spacing: -0.0625rem;
 }
@@ -368,7 +368,7 @@ input[type="password"] {
 .sel_area{position: absolute;top: 25%;right: 16px;}
 .sel_area select{position: relative; width: 160px;height: 44px;background: #ffffff;padding: 10px;border: #d9d9d9 1px solid;border-radius: 5px;font-family: 'Noto Sans KR';font-size: 16px;color: #111111;font-weight: 500;letter-spacing: -1.5px;}
 .sel_area:after{content: '';background-image: url(../img/mypage/ico_select.png);width: 12px;height: 8px;background-size: 100%;position: absolute;right: 15px;top: 50%;transform: translateY(-50%);}
-.sel_sortation{position: absolute;top: 25%;right: 16px;}
+.sel_sortation{/* position: absolute; 수정 2023-07-21 */top: 25%;right: 16px;}
 .sel_sortation select{position: relative; width: 160px;height: 44px;background: #ffffff;padding: 10px;border: #d9d9d9 1px solid;border-radius: 5px;font-family: 'Noto Sans KR';font-size: 16px;color: #111111;font-weight: 500;letter-spacing: -1.5px;}
 .sel_sortation:after{content: '';background-image: url(../img/mypage/ico_select.png);width: 12px;height: 8px;background-size: 100%;position: absolute;right: 15px;top: 50%;transform: translateY(-50%);}
 
@@ -426,7 +426,9 @@ input[type="password"] {
 .mypage_collectcreate_wrap .first form p{padding: 20px 10px;}
 .mypage_collectcreate_wrap .first form p label{display: block;float: left;font-size: 16px;font-weight: 500;color: #111111;width: 175px;padding-top: 11px;}
 .mypage_collectcreate_wrap .first form p label strong{color: #b81d2c;margin-right: 6px;}
+.comt_strong_red{color: #b81d2c;margin-right: 6px;}/* 추가 2023-07-21 */
 .mypage_collectcreate_wrap .first form p input{width: 82%;height: 44px;border: 1px solid #d6d6d6;border-radius: 5px;}
+.comt_input{width: 82%;height: 44px;border: 1px solid #d6d6d6;border-radius: 5px;padding-left: 15px;} /* 추가 2023-07-21 */
 .mypage_collectcreate_wrap .first form p span{margin: 0 20px;}
 .mypage_collectcreate_wrap .first form .size_guide{font-size: 14px;color: #999999;margin-left: 175px;padding-top: 0;}
 .mypage_collectcreate_wrap .first form .question_mark{position: relative;}
@@ -441,11 +443,17 @@ input[type="password"] {
 .mypage_collectcreate_wrap .second form .public_nondis span{float: left;display: inline-block;font-size: 16px;font-weight: 500;color: #111111;width: 175px;}
 .mypage_collectcreate_wrap .second form .public_nondis span strong{color: #b81d2c;margin-right: 6px;}
 .mypage_collectcreate_wrap .second form .public_nondis ul li{float: left;width: 100px;}
-.mypage_collectcreate_wrap .second form .public_nondis ul li input[type="checkbox"] {display: none;}
+/* radio버튼 사용해야 하는데 안나와서 수정했습니다 ! 2023-07-20 */
+/* .mypage_collectcreate_wrap .second form .public_nondis ul li input[type="checkbox"] {display: none;}
 .mypage_collectcreate_wrap .second form .public_nondis ul li input[type="checkbox"] + label {position: relative;display: inline-block;width: 20px;height: 20px;background: #fff;border: 1px solid #ddd;cursor: pointer;border-radius: 9999px;}
 .mypage_collectcreate_wrap .second form .public_nondis ul li input[type="checkbox"]:checked + label {background: url("../img/mypage/ico_check.png") no-repeat 50% 50%;}
 .mypage_collectcreate_wrap .second form .public_nondis ul li input[type="checkbox"] + label span{position: absolute;top: -3px;left: 28px;font-size: 16px;font-weight: 300;color: #111111;width: 50px;}
-
+ */
+.mypage_collectcreate_wrap .second form .public_nondis ul li input[type="radio"] {display: none;}
+.mypage_collectcreate_wrap .second form .public_nondis ul li input[type="radio"] + label {position: relative;display: inline-block;width: 20px;height: 20px;background: #fff;border: 1px solid #ddd;cursor: pointer;border-radius: 9999px;}
+.mypage_collectcreate_wrap .second form .public_nondis ul li input[type="radio"]:checked + label {background: url("../img/mypage/ico_check.png") no-repeat 50% 50%;}
+.mypage_collectcreate_wrap .second form .public_nondis ul li input[type="radio"] + label span{position: absolute;top: -3px;left: 28px;font-size: 16px;font-weight: 300;color: #111111;width: 50px;}
+ 
 .mypage_collectcreate_wrap .second form .showing_off{padding: 20px 10px;}
 .mypage_collectcreate_wrap .second form .showing_off:after{display: block;clear: both;content: "";}
 .mypage_collectcreate_wrap .second form .showing_off span{float: left;display: inline-block;font-size: 16px;font-weight: 500;color: #111111;width: 175px;}
@@ -500,7 +508,7 @@ input[type="password"] {
 .mypage_collectcreate_wrap .second .showing_off:after{display: block;clear: both;content: "";}
 .mypage_collectcreate_wrap .second .showing_off span{float: left;display: inline-block;font-size: 16px;font-weight: 500;color: #111111;width: 175px;}
 .mypage_collectcreate_wrap .second .showing_off span strong{color: #b81d2c;margin-right: 6px;}
-.mypage_collectcreate_wrap .second .showing_off .showingoff_file_area{float: left;width: 82%;height: 367px;background: #ffffff;border: 1px solid #d6d6d6;border-radius: 5px;text-align: center;padding-top: 60px;}
+.mypage_collectcreate_wrap .second .showing_off .showingoff_file_area{float: left;/* width: 82%; 수정 2023-07-21 */ width: 100%; height: 367px;background: #ffffff;border: 1px solid #d6d6d6;border-radius: 5px;text-align: center;padding-top: 60px;}
 .mypage_collectcreate_wrap .second .showing_off .showingoff_file_area p{font-size: 22px;font-weight: 500;padding: 0;}
 .mypage_collectcreate_wrap .second .showing_off .showingoff_file_area p span{float: none;font-size: 14px;font-weight: 300;color: #999999;margin-top: 26px;letter-spacing: 0;}
 .mypage_collectcreate_wrap .second .showing_off .showingoff_file_area .btn_reprepic_add{background: #717171 url("../img/mypage/ico_reprepic_add.png") 10% 50% no-repeat;font-size: 20px;font-weight: 500;color: #ffffff;padding: 16px 20px 16px 60px;border-radius: 5px;margin-top: 26px;}
