--- a/src/main/resources/static/css/common_pc.css
+++ b/src/main/resources/static/css/common_pc.css
@@ -8,7 +8,7 @@ html,body{width:100%;height:100%;font-family: 'Roboto Condensed', 'Noto Sans KR'
 ul,ol,dl,li{list-style:none;}
 li{word-break:keep-all;}
 img,fieldset{border:0;vertical-align:middle;}
-img{image-rendering: -webkit-optimize-contrast;image-rendering: crisp-edges;image-rendering: -webkit-optimize-contrast;}
+img{image-rendering: -webkit-optimize-contrast;image-rendering: crisp-edges;image-rendering: -webkit-optimize-contrast;vertical-align:top;}
 table{table-layout:fixed;border:0;border-spacing:0;border-collapse:collapse;margin: 2rem 0;}
 th,td{border:0;word-wrap:break-word;}
 table img{vertical-align:middle;}
@@ -33,3 +33,83 @@ article,aside,details,figcaption,figure,footer,header,main,hgroup,menu,nav,secti
 #skipNavigation a:focus,#skipNavigation a:hover,#skipNavigation a:active{width:100%;height:auto;padding:10px 0;background:#c4122f;color:#fff;z-index:100;}
 
 a { text-decoration:none !important } a:hover { text-decoration:none !important }
+
+
+/* 23.07.24 main css */
+.main_wrap{margin: 0 auto;}
+.main_wrap .visual{height: 430px;background: #e3e3e3 url("../img/img_new/main_visual_bg.jpg") 50% 0 no-repeat;position: relative;}
+.main_wrap .visual p{font-size: 60px;font-weight: bold;position: absolute;left: 600px;top: 107px;}
+.main_wrap .visual button{width: 300px;height: 300px;border-radius: 999px;background: #ff573b;font-size: 60px;font-weight: bold;color: #ffffff;position: absolute;right: 297px;top: 65px;}
+
+.main_wrap .member_works_showingoff_wrap{max-width: 1500px;margin: 50px auto 0;position: relative;}
+.main_wrap .member_works_showingoff_wrap:after{content: "";display: block;clear: both;}
+.main_wrap .member_works_showingoff_wrap .tit_wrap{position: relative;}
+.main_wrap .member_works_showingoff_wrap .tit_wrap h2{font-size: 26px;letter-spacing: -1.5px;}
+.main_wrap .member_works_showingoff_wrap .tit_wrap .btn_more{width: 100px;font-size: 20px;letter-spacing: -1.5px;color: #828282;background: url("../img/img_new/ico_more.png") 100% 6px no-repeat;text-align: left;position: absolute;top: 5px;right: 20px;}
+.member_works_showingoff_wrap .works_layout{margin-top: 22px;}
+.member_works_showingoff_wrap .works_layout .left{display: table-cell;}
+.member_works_showingoff_wrap .works_layout .left .bottom{display: flex;justify-content: space-between;padding-top: 20px;}
+.member_works_showingoff_wrap .works_layout .right{display: table-cell;padding-left: 20px;}
+
+.main_wrap .market_work_wrap{max-width: 1500px;margin: 50px auto 0;position: relative;}
+.main_wrap .market_work_wrap .btn_swipe_left{width: 50px;height: 50px;border-radius: 999px;background: #eeeeee url("../img/img_new/ico_swipe_left_arrow.png") 50% 50% no-repeat;;position: absolute;left: -58px;top: 50%;cursor: pointer;}
+.main_wrap .market_work_wrap .btn_swipe_left:hover{background: #eeeeee url("../img/img_new/ico_swipe_left_arrow_hover.png") 50% 50% no-repeat;}
+.main_wrap .market_work_wrap .btn_swipe_right{width: 50px;height: 50px;border-radius: 999px;background: #eeeeee url("../img/img_new/ico_swipe_right_arrow.png") 50% 50% no-repeat;;position: absolute;right: -58px;top: 50%;cursor: pointer;}
+.main_wrap .market_work_wrap .btn_swipe_right:hover{background: #eeeeee url("../img/img_new/ico_swipe_right_arrow_hover.png") 50% 50% no-repeat;}
+.main_wrap .market_work_wrap:after{content: "";display: block;clear: both;}
+.main_wrap .market_work_wrap .tit_wrap{position: relative;}
+.main_wrap .market_work_wrap .tit_wrap h2{font-size: 26px;letter-spacing: -1.5px;}
+.main_wrap .market_work_wrap .tit_wrap .btn_more{width: 100px;font-size: 20px;letter-spacing: -1.5px;color: #828282;background: url("../img/img_new/ico_more.png") 100% 6px no-repeat;text-align: left;position: absolute;top: 5px;right: 20px;}
+.main_wrap .market_work_wrap ul{width: 100%;margin-top: 22px;}
+.main_wrap .market_work_wrap ul li{float: left;margin-right: 20px;}
+.main_wrap .market_work_wrap ul li:last-child{margin-right: 0;}
+.main_wrap .market_work_wrap ul li p{text-align: center;font-size: 20px;color: #111111;padding: 26px 0;}
+
+.main_wrap .magazine9_wrap{max-width: 1500px;margin: 50px auto 0;position: relative;}
+.main_wrap .magazine9_wrap .btn_swipe_left{width: 50px;height: 50px;border-radius: 999px;background: #eeeeee url("../img/img_new/ico_swipe_left_arrow.png") 50% 50% no-repeat;;position: absolute;left: -58px;top: 50%;cursor: pointer;}
+.main_wrap .magazine9_wrap .btn_swipe_left:hover{background: #eeeeee url("../img/img_new/ico_swipe_left_arrow_hover.png") 50% 50% no-repeat;}
+.main_wrap .magazine9_wrap .btn_swipe_right{width: 50px;height: 50px;border-radius: 999px;background: #eeeeee url("../img/img_new/ico_swipe_right_arrow.png") 50% 50% no-repeat;;position: absolute;right: -58px;top: 50%;cursor: pointer;}
+.main_wrap .magazine9_wrap .btn_swipe_right:hover{background: #eeeeee url("../img/img_new/ico_swipe_right_arrow_hover.png") 50% 50% no-repeat;}
+.main_wrap .magazine9_wrap:after{content: "";display: block;clear: both;}
+.main_wrap .magazine9_wrap .tit_wrap{position: relative;}
+.main_wrap .magazine9_wrap .tit_wrap h2{font-size: 26px;letter-spacing: -1.5px;}
+.main_wrap .magazine9_wrap .tit_wrap .btn_more{width: 100px;font-size: 20px;letter-spacing: -1.5px;color: #828282;background: url("../img/img_new/ico_more.png") 100% 6px no-repeat;text-align: left;position: absolute;top: 5px;right: 20px;}
+.main_wrap .magazine9_wrap .magazine9{height: 450px;background: #f65e1b url("../img/img_new/main_magazine9_bg.png") 0 0 no-repeat;;margin-top: 22px;}
+.main_wrap .magazine9_wrap .magazine9 .contents{margin-left: 464px;width: 636px;height: 450px;position: relative;}
+.main_wrap .magazine9_wrap .magazine9 .contents .tit{font-size: 30px;font-weight: bold;color: #ffffff;border-bottom: 1px solid #ffffff;padding: 60px 0 32px 14px;}
+.main_wrap .magazine9_wrap .magazine9 .contents .text{font-size: 38px;font-weight: 300;color: #ffffff;padding: 28px 0 0 14px;}
+.main_wrap .magazine9_wrap .magazine9 .contents .text + p{font-size: 34px;font-weight: 300;color: #ffffff;padding: 28px 0 0 14px;}
+.main_wrap .magazine9_wrap .magazine9 .contents span{font-size: 24px;font-weight: 300;color: #ffffff;position: absolute;bottom: 36px;right: 20px;}
+
+.main_wrap .popular_member_wrap{max-width: 1500px;margin: 50px auto 0;position: relative;}
+.main_wrap .popular_member_wrap .btn_swipe_left{width: 50px;height: 50px;border-radius: 999px;background: #eeeeee url("../img/img_new/ico_swipe_left_arrow.png") 50% 50% no-repeat;;position: absolute;left: -58px;top: 50%;cursor: pointer;}
+.main_wrap .popular_member_wrap .btn_swipe_left:hover{background: #eeeeee url("../img/img_new/ico_swipe_left_arrow_hover.png") 50% 50% no-repeat;}
+.main_wrap .popular_member_wrap .btn_swipe_right{width: 50px;height: 50px;border-radius: 999px;background: #eeeeee url("../img/img_new/ico_swipe_right_arrow.png") 50% 50% no-repeat;;position: absolute;right: -58px;top: 50%;cursor: pointer;}
+.main_wrap .popular_member_wrap .btn_swipe_right:hover{background: #eeeeee url("../img/img_new/ico_swipe_right_arrow_hover.png") 50% 50% no-repeat;}
+.main_wrap .popular_member_wrap:after{content: "";display: block;clear: both;}
+.main_wrap .popular_member_wrap .tit_wrap{position: relative;}
+.main_wrap .popular_member_wrap .tit_wrap h2{font-size: 26px;letter-spacing: -1.5px;}
+.main_wrap .popular_member_wrap .tit_wrap .btn_more{width: 100px;font-size: 20px;letter-spacing: -1.5px;color: #828282;background: url("../img/img_new/ico_more.png") 100% 6px no-repeat;text-align: left;position: absolute;top: 5px;right: 20px;}
+.main_wrap .popular_member_wrap ul{width: 100%;margin-top: 22px;}
+.main_wrap .popular_member_wrap ul li{float: left;width: 20%;display: flex;justify-content: center;}
+.main_wrap .popular_member_wrap .public_member .logo{width: 250px;height: 250px;border-radius: 999px;background: #eaebea url("../img/img_new/public_member_logo00.png") 50% 50% no-repeat;cursor: pointer;}
+.main_wrap .popular_member_wrap .public_member .name{display: flex;justify-content: center;}
+.main_wrap .popular_member_wrap .public_member .name span{background: #8f8f8f;font-size: 16px;font-weight: 500;color: #ffffff;padding: 3px 8px;border-radius: 5px;display: inline-block;margin: 12px 0;}
+.main_wrap .popular_member_wrap .public_member .text{font-size: 18px;font-weight: 300;color: #111111;text-align: center;}
+
+.main_wrap .exhint_rewview_wrap{max-width: 1500px;margin: 50px auto 0;position: relative;}
+.main_wrap .exhint_rewview_wrap .btn_swipe_left{width: 50px;height: 50px;border-radius: 999px;background: #eeeeee url("../img/img_new/ico_swipe_left_arrow.png") 50% 50% no-repeat;;position: absolute;left: -58px;top: 50%;cursor: pointer;}
+.main_wrap .exhint_rewview_wrap .btn_swipe_left:hover{background: #eeeeee url("../img/img_new/ico_swipe_left_arrow_hover.png") 50% 50% no-repeat;}
+.main_wrap .exhint_rewview_wrap .btn_swipe_right{width: 50px;height: 50px;border-radius: 999px;background: #eeeeee url("../img/img_new/ico_swipe_right_arrow.png") 50% 50% no-repeat;;position: absolute;right: -58px;top: 50%;cursor: pointer;}
+.main_wrap .exhint_rewview_wrap .btn_swipe_right:hover{background: #eeeeee url("../img/img_new/ico_swipe_right_arrow_hover.png") 50% 50% no-repeat;}
+.main_wrap .exhint_rewview_wrap:after{content: "";display: block;clear: both;}
+.main_wrap .exhint_rewview_wrap .tit_wrap{position: relative;}
+.main_wrap .exhint_rewview_wrap .tit_wrap h2{font-size: 26px;letter-spacing: -1.5px;}
+.main_wrap .exhint_rewview_wrap .tit_wrap .btn_more{width: 100px;font-size: 20px;letter-spacing: -1.5px;color: #828282;background: url("../img/img_new/ico_more.png") 100% 6px no-repeat;text-align: left;position: absolute;top: 5px;right: 20px;}
+.main_wrap .exhint_rewview_wrap ul{width: 100%;margin-top: 22px;}
+.main_wrap .exhint_rewview_wrap ul li{float: left;display: flex;justify-content: flex-start;margin-right: 33px;}
+.main_wrap .exhint_rewview_wrap ul li:last-child{margin-right: 0;}
+.main_wrap .exhint_rewview_wrap .exhint_review .img{width: 250px;height: 250px;border-radius: 999px;background: #eaebea url("../img/img_new/public_member_logo00.png") 50% 50% no-repeat;cursor: pointer;}
+.main_wrap .exhint_rewview_wrap .exhint_review .name{display: flex;justify-content: center;margin-top: 20px;}
+.main_wrap .exhint_rewview_wrap .exhint_review .name span{height: 30px;background: #8f8f8f;font-size: 16px;font-weight: 500;color: #ffffff;padding: 3px 8px;border-radius: 5px;display: inline-block;margin: 15px 0 0 10px;}
+.main_wrap .exhint_rewview_wrap .exhint_review .text{font-size: 18px;font-weight: 300;color: #111111;text-align: center;margin-top: 20px;}
