--- a/src/main/resources/templates/thymeleaf/fo/community/community_event.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_event.html
@@ -111,15 +111,15 @@
             </div>
             <div class="sel_wrap">
                 <div class="sel_sortation">
-                    <select name="" id="">
+                    <select name="" id="" onchange="searchEventType(this);">
                         <option value="">구분</option>
-                        <option value="">진행중</option>
-                        <option value="">진행종료</option>
+                        <option value="1">진행중</option>
+                        <option value="0">진행종료</option>
                     </select>
                 </div>
             </div>            
             <div class="event_wrap">
-                <div class="event_row mt0">
+                <!-- <div class="event_row mt0">
                     <ul>
                         <li>
                             <div class="event_box">
@@ -184,13 +184,97 @@
                             </div>
                         </li>                        
                     </ul>                    
-                </div>           
-                <div class="btn_area">
-                    <button>더보기</button>
-                </div>
+                </div> -->
             </div>  
+			<div class="btn_area">
+			    <button>더보기</button>
+			</div>
         </div>
     </div>
     <th:block th:replace="thymeleaf/footer :: footerFragment"></th:block>
+    
+    <script th:inline="javascript">
+    	var pageInfo = {
+   			start: 0,
+   			size: 6,
+   			type: ""
+    	}
+    	
+    	var isFirst = true; // 처음으로 리스트 불러오는건지 체크
+    	
+    	$(document).ready(function() {
+    		searchEventList();
+    	});
+    	
+    	// 이벤트 리스트 조회
+    	function searchEventList(isTypeSearch) {
+    		$.ajax({
+    			type: "post",
+    			url: "/community/searchEventList",
+    			data: {
+    				pageStart: pageInfo.start,
+    				pageSize: pageInfo.size,
+    				type: pageInfo.type
+    			},
+    			success: function(data) {
+    				console.log(data);
+    				
+    				// 구분 검색하는 경우 전에 있던 html 비움
+    				if(isTypeSearch) {
+    					$(".event_wrap").empty();
+    					isFirst = true;
+    				}
+    				
+    				var list = data.result.eventList;
+    				var html = "";
+    				
+    				$.each(list, function(idx, obj) {
+    					var cnt = idx + 1;
+    					if(cnt == 1 || cnt % 4 == 0) {
+    						html += "<div class='event_row "+ (isFirst ? "mt0" : "") +"'>";
+    	    				html += "	<ul>";
+    					}
+    					html += "			<li>";
+    					html += "				<div class='event_box'>";
+    					html += "					<div class='img'>";
+    					html += "						<div class='"+ (obj.isEventEnd ? "ico_ongoing'>진행중" : "ico_endprogress'>진행<br>종료") +"</div>";
+    					html += "						<img src="+ obj.bnnMpImgUrl +" alt='' style='width: 480px; height: 480px;'>";
+    					html += "					</div>";
+    					html += "					<div class='text'>"+ obj.bnnStartDt + " ~ " + obj.bnnEndDt + "<br>" + obj.bnnTitle +"</div>";
+    					html += "				</div>";
+    					html += "			</li>";
+    					if(cnt != 1 && cnt % 3 == 0) {
+    	    				html += "	</ul>";
+    						html += "</div>";
+    					}
+	   					isFirst = false;
+    				});
+    				
+    				
+    				$(".event_wrap").append(html).trigger("create");
+    				
+    				pageInfo.start += (pageInfo.start == 0) ? pageInfo.size : 3;
+   					pageInfo.size = 3;
+    			},
+    			error: function(error) {
+    	        	var errorJson = JSON.stringify(error);
+    	            console.log(errorJson);
+    	        }
+    		});
+    	}
+    	
+    	// 구분 체크 이벤트
+    	function searchEventType(obj) {
+    		pageInfo.start = 0;
+			pageInfo.size = 6;
+    		pageInfo.type = $(obj).val();
+    		searchEventList(true);
+    	}
+    	
+    	// More Btn
+		$(".btn_area button").on('click', function(){
+			searchEventList();
+		});
+    </script>
 </body>
 </html>
