--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -94,11 +94,17 @@
 			<div class="h-gnb">
 				<div class="navbox">
 					<nav>
-						<li><a href="/main" class="logo_mo"><img src="/resources/img/favicon.png" width="26px"></a></li>
-						<li><a href="/deal">Deal</a></li>
+						<!-- <li><a href="/main" class="logo_mo"><img src="/resources/img/favicon.png" width="26px"></a></li> -->
+						<!-- <li><a href="/deal">Deal</a></li> -->
 						<!-- <li><a href="/insights"><img src="/resources/img/mgz/link-text.png" class="link-text" /></a></li> -->
-						<li><a href="/mgz9/insights">Magazine<span style="color:#ea5514;">9</span></a></li>
-						<li><a href="/artist">Artist Library</a></li>
+						<!-- <li><a href="/mgz9/insights">Magazine<span style="color:#ea5514;">9</span></a></li> -->
+						<!-- <li><a href="/artist">Artist Library</a></li> -->
+						<!-- <li><a href="/about/serviceIntro">About</a></li> -->
+						<!-- 2023-07-28 메인 메뉴 한글화 및 아티스트 라이브러리 메뉴 이동 (정영우) -->
+						<li><a href="/main" class="logo_mo"><img src="/resources/img/favicon.png" width="26px"></a></li>
+						<li><a href="/community/main">커뮤니티</a></li>
+						<li><a href="/deal">거래</a></li>
+						<li><a href="/mgz9/insights">매거진<span style="color:#ea5514;">9</span></a></li>
 						<li><a href="/about/serviceIntro">About</a></li>
 					</nav>
 				</div>
@@ -228,20 +234,21 @@
 			</div>
 		</div> -->
 		<!-- 0808 -->
-		<div class="bab-bo mo-no">
+		<!-- 2023-07-28 가이드 배너 삭제 (정영우) -->
+		<!-- <div class="bab-bo mo-no">
 			<div class="mab-rb">
 				<a href="javascript:void(0);" onclick="openGuide()" class="mab-a"><span>Guide</span></a>
 				<ul class="mab-ul">
 					<li><a href="#" id="artstReg" data-toggle="modal" data-target="#authorModal1"><img src="/resources/img/icon-4.png" /> <span>작가등록</span></a></li>
 					<li><a href="javascript:void(0);" onclick="workReg()"><img src="/resources/img/icon-5.png" /> <span>작품등록</span></a></li>
 					<li><a href="javascript:void(0);" class="myWorkList"><img src="/resources//img/icon-6.png" /> <span>판매하기</span></a></li>
-					<!-- onclick="collectionReg()" -->
-					<!-- <li><a href="/myPage/myCollection"><img src="/resources//img/icon-6.png" /> <span>판매하기</span></a></li> -->
+					onclick="collectionReg()"
+					<li><a href="/myPage/myCollection"><img src="/resources//img/icon-6.png" /> <span>판매하기</span></a></li>
 					
 					
 				</ul>
 			</div>
-		</div>
+		</div> -->
 	</div>
 		
 <!-- 모달검색 -->
